--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -19,8 +19,17 @@ body {
     background-color: #fef7f0;
     color: #7c9077;
     border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
+    padding: 5px 20px;
+    border-radius: 25px;
+    margin-top: 10px;
+}
+
+.bt {
+    background-color: #7c9077;
+    color: #fef7f0;
+    border: none;
+    padding: 5px 20px;
+    border-radius: 25px;
     margin-top: 10px;
 }
 
